build(common): Update build script for rpy decompiler